# spo_lab_3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  spo_lab3
src/: main.c
src/client/: client.c  client.h  clientEvent.c  clientEvent.h  network.c  network.h  ui.c  ui.h
src/common/: book.c  book.h  error.h  event.c  event.h  protocol.c  protocol.h  utils.c  utils.h
src/server/: network.c  network.h  server.c  server.h  serverEvent.c  serverEvent.h
